--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ Variables
 	--red: red;
 	--green: green;
 	/* Other Variables*/
-	--transition: all 1.5s linear;
+	--transition: all 0.3s linear;
 	--letter-spacing: 0.1rem;
 }
 
@@ -63,13 +63,16 @@ span {
 
 /* Main */
 main {
-	min-height: 94vh;
+	height: 100vh;
+  width: 100vw;
 	display: grid;
 	place-items: center;
 }
 
 .container {
 	text-align: center;
+  /* max-width: 40%;
+  margin: auto; */
 }
 h1 {
 	font-size: 3rem;
@@ -90,7 +93,7 @@ h1 {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	/* margin: 1rem; */
+	
 }
 
 .btn {
@@ -107,18 +110,16 @@ h1 {
 }
 
 .btn:hover {
-	border: 2px solid #ff8906;
+  border: 2px solid #ff8906;
 	background-color: var(--bck-clr);
 	color: white;
-	transition: var(--letter-spacing);
+  transition: var(--transition);
 }
 
 /* Footer */
 .footer {
-	height: 6vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	display: grid;
+	place-items: center;
 }
 .footer p {
 	color: var(--para-clr);
@@ -129,4 +130,17 @@ h1 {
 }
 .footer a:hover {
 	color: white;
+}
+
+@media screen and (max-width: 720px) {
+  main{
+    height: 96vh;
+  }
+  .btn {
+    margin: 0 0.5rem;
+  }
+  .footer {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
 }
