--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ h1 {
 
 @media screen and (max-width: 550px) {
 	h1 {
+		color: #ff8906;
 		font-size: 2rem;
 		margin-bottom: 2.5rem;
 		letter-spacing: var(--letter-spacing);
